--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,9 @@ body {
   height: 100vh;
   overflow: hidden;
   font-family: "Ubuntu", sans-serif;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .container {
@@ -24,6 +27,28 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
+  position: relative;
+}
+.container .play-btn {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background: linear-gradient(90deg, royalblue 0%, royalblue 50%, #fff 50%, #fff 100%);
+  top: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.5rem;
+  line-height: 3rem;
+  color: #000;
+  text-align: center;
+  z-index: 90;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+  box-shadow: 0 0 0.3rem 0.1rem rgba(0, 0, 0, 0.4);
+}
+.container .play-btn:hover {
+  color: rgba(0, 0, 0, 0.4);
 }
 .container .col {
   width: 50%;
@@ -52,6 +77,7 @@ body {
   color: #fff;
   background-color: rgba(0, 0, 0, 0.4);
   animation: animate 20s linear infinite;
+  animation-play-state: paused;
 }
 .container .col:nth-child(2) {
   background-color: royalblue;
@@ -61,6 +87,7 @@ body {
   -webkit-text-stroke: 0.2rem;
   -webkit-text-stroke-color: #fff;
   animation: animate 20s linear infinite;
+  animation-play-state: paused;
 }
 
 @keyframes animate {
