--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,78 +1,112 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 10px;
     scroll-behavior: smooth;
 }
 
-body{
+body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     font-family: 'Ubuntu', sans-serif;
+    user-select: none;
 }
 
-.container{
+.container {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-    .col{
+    position: relative;
+
+    .play-btn { 
+        position: absolute;
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+        background: linear-gradient(90deg, royalblue 0%, royalblue 50%, #fff 50%, #fff 100%);
+        top: 5rem;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 1.5rem;
+        line-height: 3rem;
+        color: #000;
+        text-align: center;
+        z-index: 90;
+        cursor: pointer;
+        transition: all .2s ease-in;
+        box-shadow: 0 0 .3rem .1rem rgba(0, 0, 0, .4);
+        &:hover{
+            color: rgba(0, 0, 0, .4);
+        }
+    }
+
+    .col {
         width: 50%;
         height: 100vh;
-        overflow: hidden; 
+        overflow: hidden;
         position: relative;
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        p{
+
+        p {
             font-size: 10rem;
             font-weight: 700;
-            white-space: nowrap; 
+            white-space: nowrap;
             transform: translateX(100%);
         }
-        &:nth-child(1){
+
+        &:nth-child(1) {
             background: url(../../img.jpg);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            p{
+
+            p {
                 position: absolute;
                 left: 100%;
                 color: #fff;
-                background-color: rgba(0, 0, 0, .4);  
+                background-color: rgba(0, 0, 0, .4);
                 animation: animate 20s linear infinite;
+                animation-play-state: paused;
 
             }
         }
-        &:nth-child(2){
+
+        &:nth-child(2) {
             background-color: royalblue;
-            p{
+
+            p {
                 color: transparent;
                 -webkit-text-stroke: .2rem;
                 -webkit-text-stroke-color: #fff;
-                 
+
                 animation: animate 20s linear infinite;
+                animation-play-state: paused;
             }
         }
     }
 }
 
 
-@keyframes animate{
-    0%, 100%{
+@keyframes animate {
+
+    0%,
+    100% {
         transform: translateX(0);
     }
-    50%{
+
+    50% {
         transform: translateX(-100%);
     }
 }
- 
